fixed valign for loading circle

--- a/css/twist.css
+++ b/css/twist.css
@@ -877,15 +877,23 @@ body {
     -webkit-tap-highlight-color: #050505;
 }
 
-#overlay{
-  position:fixed;
-  z-index:99999;
-  top:0;
-  left:0;
-  bottom:0;
-  right:0;
-  width:100%;
-  height:100%;
-  overflow-y: hidden;
-  background:#FFF;
+#overlay {
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    background: #FFF;
+    text-align: center;
+    display: table;
+}
+
+.overlay-center {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
 }
